        - Fix "Multiple shipments to Canada return 0 except the first" bug, caused
          by poorly implemented Zones class attribute: now correctly implement as a
          static hash, accessed by function.
        - Minor fixes: Express Plus.
        - Offline::UPS now supports all services to Canada, which completes all of 
          the Offline::UPS countries.

    - Tests:
      - Additional UPS Online/Offline tests: Canada, Mexico.
      - More tests for Offline::UPS.
      - Updated the Interchange UserTag simulator, and make it a part of the
        standard testing scheme (instead of a manual test).
    
    - UserTag Updates:
        - Major UserTag enhancements.  
        - Defaults now readable.  
        - Bug fixes.
        - Reporting updates.
        - Add the [incident] usertag for reporting errors.
        - Minor UserTag compatibility updates (from_state)

1.02  Jan 06 2004
    - Update all data tables from UPS (Jan 05 2004)
    - Update fuel surcharge
    - Installation documentation updates.
    - Rename the update functions.
    - Sample "auto update" script that will update the data files.

1.01  Jan 02 2004
    - Offline UPS support for International Express, ExpressPlus, and Expedited.
    - Offline UPS support for Hawaii and Alaska.
    - Tests for International and Hawaii/Alaska.
    - Utilize Devel::Required to automatically generate required modules list.
    - Patch Devel::Required so it can be customized.
    - Documentation Updates.
    - Some data format changes (east coast/west coast data update, add 'letter'
      to 1da chart, rename several of the files).

1.00  Dec 21 2003
    - Major updates: many new features prompt the jump into 1.0 land. 
    - New Offline::UPS module: provides table-based rate requests, which are
      fast, local lookups that do not rely on the Internet.
    - Config module added: provides ini-style configuration options for easy 
      customizability.